@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.11-dev
 
+-minclients is now what -maxclients used to be, -maxclients is now
+really what it says it is [Stas]
+
 Fix Apache::TestRequest::lwp_as_string to work with LWP 5.79 [Stas]
 
 
